--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,7 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>unitTest.GetTest.getCountryVar</td></tr>
+<tr><td>unitTest.GetTest.getCountrylog</td></tr>
+<tr><td>unitTest.GetTest.getCountryResponseCodeValidationNagetiveTest</td></tr>
+<tr><td>unitTest.GetTest.getCitiesReoponseValidation</td></tr>
+<tr><td>unitTest.GetTest.getCountryPreetyprint</td></tr>
 </table>
